@@ -52,3 +52,15 @@ Limit range to
 
 </div>
 </div><div id="fade" class="black_overlay"></div>
+<script>
+function fees_chart_restore_settings() {
+	if (localStorage.getItem("fees_chart_points")) block_fees_points.checked = true
+	var val = localStorage.getItem("fees_chart_scale")
+	if (val==100) block_fees_full.checked=true
+	else if (val==5) block_fees_5.checked=true
+	val = localStorage.getItem("fees_chart_mode")
+	if (val=="group")  block_fees_gru.checked=true
+	else  if (val=="sort")  block_fees_spb.checked=true
+}
+fees_chart_restore_settings()
+</script>
